# blog-api-with-rust

./: .env  Cargo.toml  Readme.md
.docker/: Dockerfile
src/: main.rs
src/articles/: mod.rs  model.rs  routes.rs
