[package]
name = "blog-api-with-rust"
version = "0.1.0"
authors = ["David Silva <srdavidsilva@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
actix-web = "3"
mongodb = "1.2.1"
bson = "1.0.0"
futures = "0.3.5"
chrono = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
dotenv = "0.15.0"
